Fixed the vertical alignment of task's elements

--- a/src/style.css
+++ b/src/style.css
@@ -209,7 +209,7 @@ body {
 #newNameTextfieldInput {
     width: 100%;
     height: 2.5vh;
-    border: none;
+    border-radius: 0;
     border-bottom: 1px solid;
     padding: 5px 10px;
     outline: none;
@@ -339,6 +339,7 @@ body {
     display: flex;
     height: fit-content;
     width: 100%;
+    align-items: center;
     cursor: pointer;
     color: rgb(254, 252, 252, 0.7);
     margin: 5px;
